--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <p>꿈자리 | 앱 디자인 <br>2023.06</p>
           </div>
           <div class="portfolio-item item4" onclick="window.open('https://www.datasa.net/rainbow')">
-              <p>데이터사이언스아카데미<br>2023.08.01~재직중</p>
+              <p>DSA | 웹사이트<br>2023.08.01~재직중</p>
           </div>
         </div>
     </section>
