--- a/seven/index.html
+++ b/seven/index.html
@@ -21,6 +21,11 @@
         <h1 class="logo">
           <a href="#"><img src="./img/logo.jpg" alt="seven-eleven" /></a>
         </h1>
+        <button class="mobile-menu-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         <ul class="gnb">
           <li>
             <a href="#">브랜드 스토리</a>
